# compressed-meshlet-paper

./: .clang-format  CMakeLists.txt  LICENSE.md  README.md
cmake/: FindGUROBI.cmake
include/: Gurobi.h  MILP.h  OptimalStrips.h  SCIP.h
src/: Gurobi.cpp  MILP.cpp  OptimalStrips.cpp  SCIP.cpp  demo.cpp
src/hlsl/: GTS-Reuse.hlsl  GTS.hlsl  Quantization.hlsl
